Remove unused methods.